# vaur-system

./: .gitignore  README.md  docker-compose.staging.yml  docker-compose.yml
.github/workflows/: staging-deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  schema.yml
backend/notifications/: models.py
backend/notifications/migrations/: 0001_initial.py  0002_notification_is_read.py
backend/users/: admin.py  api_urls.py  auth_urls.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_teacher_student_limit.py  0003_alter_user_contacts.py
backend/vaur/: asgi.py  settings.py  urls.py  wsgi.py
backend/vaur/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/vaur/users/migrations/: 0001_initial.py  0002_alter_student_group_number_alter_teacher_department.py
backend/vaur/vaur/: asgi.py  settings.py  urls.py
backend/works/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/works/migrations/: 0001_initial.py  0002_drop_legacy_worktype_code.py  0003_work_document_fields.py  0004_workrequest.py  0005_work_status_alter_work_norm_control_status.py  0006_workrequest_status.py  0007_work_document_updated_at.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: applications.js  auth.js  baseUrl.js  client.js  groups.js  (+2 more)
(+16 files in other folders)
