[project]
name = "vaur-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.1.15)",
    "django-cors-headers (==4.9.0)",
    "djangorestframework (==3.16.1)",
    "drf-spectacular (==0.29.0)",
    "psycopg[binary] (==3.2.12)",
    "djangorestframework-simplejwt (==5.5.1)",
    "django-storages[s3] (==1.14.6)",
    "boto3 (==1.40.58)"
]

[tool.poetry]
packages = [
    { include = "vaur" },
    { include = "notifications" },
    { include = "users" },
    { include = "works" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
